--- a/templates/causas/receptor.html
+++ b/templates/causas/receptor.html
@@ -3,6 +3,19 @@
 {% bootstrap_javascript jquery=1 %}
 {%block title%}Receptor | SIJ{%endblock%}
 {%block titulo%}Mis causas{%endblock%}
+{%block menu%}
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas">
+		<span class="glyphicon glyphicon-filter"></span>	
+	</button>
+
+	<!--<button type="button" class="navbar-toggle"></button>-->
+{%endblock%}
+
+{%block menu1%}
+	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
+		<span class="glyphicon glyphicon-filter"></span>	
+	</button>
+{%endblock%}
 {%block content%}
 <div class="row">
 	{% if user.usuario.tipo == 1%}
