--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -12,81 +12,39 @@
 	<title>{%block title%}{%endblock%}</title>
 	{%block css%}
 		<link rel="stylesheet" type="text/css" href="/media/css/style_app.css">
-		<link rel="stylesheet" type="text/css" href="/media/css/footer.css">
 		<link rel="stylesheet" type="text/css" media="all" href="/media/css/daterangepicker-bs3.css" />
 	{%endblock%}
 </head>
-<body>
-	{% if user.is_authenticated %}
-	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-				<span class="sr-only">Ver Men&uacute;</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="{% url 'redirect_usuario' %}">
-				<div class="row">
-					<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-						<img src="/media/images/logo-SIJ.png" alt="" height="40px;">
-					</div>
-				</div>
-			</a>
-			<div style="margin-top: 12px;">
-				<span style="color: rgb(30,30,30); font-size: 18px; padding-left: 10px;"><b>{%block titulo%}{%endblock%}</b></span>
-			</div>
-		</div>
+<body style="padding-top: 50px;">
 	
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse navbar-ex1-collapse">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a id="nombre" href="#">Bienvenido  {%if user.usuario.tipo == 0 %}abogado{%endif%}{%if user.usuario.tipo == 1%}receptor{%endif%}{% if user.usuario.tipo == 2%}juez{%endif%}: <b>{{user.username}}</b></a></li>
-				{% if user.usuario.tipo != 2 %}
-				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" id="campana" data-toggle="dropdown">
-					</a>
-					<ul class="dropdown-menu" id="dropnotificaciones" role='menu'>
-					</ul>
-				</li>
-				{% endif %}
-				<li class="dropdown" style="margin-right: 10px;">
-					<a href="#" class="dropdown-toggle hidden-xs" data-toggle="dropdown"><span class="glyphicon glyphicon-cog hidden-xs"></span><span class="text-center visible-xs">Configuraci&oacute;n</span></a>
-					<ul class="dropdown-menu hidden-xs" role='menu'>
-						{% if user.usuario.tipo == 1 %}
-							<li><a href="{% url 'listado_tribunales_receptor' %}">Mis tribunales</a></li>
-						{%endif%}
-						<li><a href="{% url 'editar_datos' %}">Editar mis datos</a></li>
-						<li><a href="{% url 'password_change_form' %}">Cambiar clave</a></li>
-						<li class="divider"></li>
-						<li><a href="{% url 'vista_logout' %}">Cerrar sesi&oacute;n</a></li>
-					</ul>
-				</li>
-				{% if user.usuario.tipo == 1 %}
-					<li class="hidden-sm hidden-md hidden-lg"><a class="text-center" href="{% url 'listado_tribunales_receptor' %}">Mis tribunales</a></li>
-				{%endif%}
-				<li class="hidden-sm hidden-md hidden-lg"><a class="text-center" href="{% url 'editar_datos' %}">Editar mis datos</a></li>
-				<li class="hidden-sm hidden-md hidden-lg"><a class="text-center" href="{% url 'password_change_form' %}">Cambiar clave</a></li>
-				<li class="divider hidden-sm hidden-md hidden-lg"></li>
-				<li class="hidden-sm hidden-md hidden-lg"><a class="text-center" href="{% url 'vista_logout' %}">Cerrar sesi&oacute;n</a></li>
-			</ul>
-		</div><!-- /.navbar-collapse -->
-	</nav>
-	{% else%}
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="{% url 'redirect_usuario' %}">
-				<div class="row">
-					<div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-						<img src="/media/images/logo-SIJ.png" alt="" height="40px;">
-					</div>
-				</div>
-			</a>
-		</div>
+		<div class="container-fluid">
+			<div class="navbar-header">
+				{% block menu%}
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="">
+					<span class="glyphicon glyphicon-filter"></span>
+				</button>
+				{%endblock%}
+			  
+			  	<a class="navbar-brand" href="{% url 'redirect_usuario' %}">
+					<img src="/media/images/logo-SIJ.png" alt="" height="40px;" style="margin-right: 10px;">
+				</a>
+				<p class="navbar-text" style="color: rgb(30,30,30);">{%block titulo%}{%endblock%}</p>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+			    	<li>
+			    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
+							<span class="glyphicon glyphicon-filter"></span>
+						</button>
+					</li>
+			  	</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
-	{%endif%}
-	<div class="container">
+	<div class="container-fluid">
 		{% block content %}
 		{% endblock%}
 	</div>
