--- a/templates/home/registro.html
+++ b/templates/home/registro.html
@@ -7,7 +7,6 @@
 	<div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
 		<img src="/media/images/logo-SIJ.png" alt="" style="width: 70%; margin-left:15%; margin-bottom: 30px;" >
 		<div class="row">
-			{# <h3 class="text-center">Registro</h3> #}
 			<form action="." class="form-horizontal" method="POST" role="form">
 				{% csrf_token %}
 				<div class="row">
@@ -19,10 +18,10 @@
 					{{mensaje}}
 					<div class="form-group form-group-lg">
 						{# <label for="rol" class="control-label col-xs-2">Perfil</label> #}
-						<div class="col-xs-12">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 							{{form.rol}}
 						</div>
-						<div class="col-sm-7 col-sm-offset-3">
+						<div class="col-sm-8 col-sm-offset-2">
 							<small>
 								{{form.rol.errors}}
 							</small>
@@ -48,29 +47,29 @@
 					</div>-->
 					<div class="form-group form-group-lg">
 						{# <label for="email" class="control-label col-sm-5">Correo</label> #}
-						<div class="col-sm-7">{{form.email}}</div>
-						<div class="col-sm-7 col-sm-offset-3">
+						<div class="col-sm-8 col-sm-offset-2">{{form.email}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.email.errors}}</small>
 						</div>
 					</div>
 					<div class="form-group form-group-lg">
 						{# <label for="username" class="control-label col-sm-5">Nombre de Usuario</label> #}
-						<div class="col-sm-7">{{form.username}}</div>
-						<div class="col-sm-7 col-sm-offset-3">
+						<div class="col-sm-8 col-sm-offset-2">{{form.username}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.username.errors}}</small>
 						</div>
 					</div>
 					<div class="form-group form-group-lg">
 						{# <label for="password1" class="control-label col-sm-5">Contrase&ntilde;a</label> #}
-						<div class="col-sm-7">{{form.password1}}</div>
-						<div class="col-sm-7 col-sm-offset-3">
+						<div class="col-sm-8 col-sm-offset-2">{{form.password1}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.password1.errors}}</small>
 						</div>
 					</div>
 					<div class="form-group form-group-lg">
 						{# <label for="password2" class="control-label col-sm-5">Repetir Contrase&ntilde;a</label> #}
-						<div class="col-sm-7">{{form.password2}}</div>
-						<div class="col-sm-7 col-sm-offset-3">
+						<div class="col-sm-8 col-sm-offset-2">{{form.password2}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.password2.errors}}</small>
 						</div>
 					</div>
@@ -97,8 +96,8 @@
 							<div class="col-sm-7">{{form.telefono}}</div>
 						</div>
 					</div>-->
-					<div class="form-group form-group-lg">
-						<div class="col-xs-12">
+					<div class="form-group form-group-lg" style="margin-bottom: 0px;">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 							<button class="btn btn-action btn-primary btn-lg btn-block">Registrar</button>
 						</div>
 					</div>
