--- a/templates/causas/receptor.html
+++ b/templates/causas/receptor.html
@@ -4,17 +4,16 @@
 {%block title%}Receptor | SIJ{%endblock%}
 {%block titulo%}Mis causas{%endblock%}
 {%block menu%}
-	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas">
-		<span class="glyphicon glyphicon-filter"></span>	
+	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".filtros-causas">
+		<span class="glyphicon glyphicon-filter"></span>
 	</button>
-
-	<!--<button type="button" class="navbar-toggle"></button>-->
 {%endblock%}
-
 {%block menu1%}
-	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
-		<span class="glyphicon glyphicon-filter"></span>	
-	</button>
+	<li>
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
+			<span class="glyphicon glyphicon-filter"></span>
+		</button>
+	</li>
 {%endblock%}
 {%block content%}
 <div class="row">
