--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -16,6 +16,7 @@
 	{%endblock%}
 </head>
 <body style="padding-top: 50px;">
+	{%if user.is_authenticated%}
 	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
@@ -36,6 +37,17 @@
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
 	</nav>
+	{%else%}
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<div class="navbar-header">
+			  	<a class="navbar-brand" href="{% url 'redirect_usuario' %}">
+					<img src="/media/images/logo-SIJ.png" alt="" height="40px;" style="margin-right: 10px;">
+				</a>
+			</div>
+		</div><!-- /.container-fluid -->
+	</nav>
+	{%endif%}
 	<div class="container-fluid">
 		{% block content %}
 		{% endblock%}
