--- a/templates/home/editar_usuario.html
+++ b/templates/home/editar_usuario.html
@@ -3,6 +3,10 @@
 {% bootstrap_javascript jquery=1 %}
 {%block title%} Mis Datos | SIJ{%endblock%}
 {%block titulo%} Mis datos{%endblock%}
+{%block menu%}
+{%endblock%}
+{%block menu1%}
+{%endblock%}
 {%block content%}
 <div class="row">
 	<div class="col-md-8 col-md-offset-2 col-xs-12">
@@ -25,42 +29,46 @@
 			{% endif %}
 			<div class="form-group form-group-lg">
 				{# <label for="email" class="control-label col-sm-5">Correo</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.email}}</div>
-				<div class="col-sm-7 col-xs-12 col-sm-offset-3">
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.email}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12 col-sm-offset-3">
 					<small>{{form.email.errors}}</small>
 				</div>
 			</div>
 			<div class="form-group form-group-lg">
 				{# <label for="region" class="control-label col-sm-5">Regi&oacute;n</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.region}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.region}}</div>
 			</div>
 			<div class="form-group form-group-lg">
 				{# <label for="provincia" class="control-label col-sm-5">Provincia</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.provincia}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.provincia}}</div>
 			</div>
 			<div class="form-group form-group-lg">
 				{# <label for="comuna" class="control-label col-sm-5">Comuna</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.comuna}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.comuna}}</div>
 			</div>
 			<div class="form-group form-group-lg">
 				{# <label for="direccion" class="control-label col-sm-5">Direcci&oacute;n</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.direccion}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.direccion}}</div>
 			</div>
 			<div class="form-group form-group-lg">
 				{# <label for="telefono" class="control-label col-sm-5">Tel&eacute;fono</label> #}
-				<div class="col-sm-7 col-xs-12">{{form.telefono}}</div>
+				<div class="col-sm-8 col-sm-offset-2 col-xs-12">{{form.telefono}}</div>
 			</div>
 			<div class="form-group form-group-lg">
-				<div class="col-xs-12">
+				<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 					<input type="submit" value="Guardar mis datos" class="btn btn-action btn-primary btn-block" />
 				</div>
 			</div>
-		</form>
 		{% if user.usuario.tipo == 1%}
-			<br>
 			<hr>
-			<a href="{% url 'listado_tribunales_receptor' %}" class="btn btn-action btn-primary btn-block">Mis Tribunales</a>
+			<div class="form-group form-group-lg">
+				<div class="col-sm-8 col-sm-offset-2">
+					<br>
+					<a href="{% url 'listado_tribunales_receptor' %}" class="btn btn-action btn-primary btn-block">Mis Tribunales</a>
+				</div>
+			</div>
 		{%endif%}
+		</form>
 	</div>
 </div>
 {%endblock%}
