--- a/media/css/style_app.css
+++ b/media/css/style_app.css
@@ -58,6 +58,16 @@ a:hover{
 
 /* agregando cosas para enchular el style */
 
+.navbar-text{
+  font-size: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.navbar-default .navbar-text {
+  color: rgb(30,30,30);
+}
+
 /*.nav-tabs {
     border-bottom: 3px solid rgb(60, 160, 160);
 }
