--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -25,7 +25,7 @@
 			  	<a class="navbar-brand" href="{% url 'redirect_usuario' %}">
 					<img src="/media/images/logo-SIJ.png" alt="" height="40px;" style="margin-right: 10px;">
 				</a>
-				<p class="navbar-text" style="color: rgb(30,30,30);">{%block titulo%}{%endblock%}</p>
+				<p class="navbar-text">{%block titulo%}{%endblock%}</p>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
