--- a/templates/causas/receptor.html
+++ b/templates/causas/receptor.html
@@ -4,15 +4,15 @@
 {%block title%}Receptor | SIJ{%endblock%}
 {%block titulo%}Mis causas{%endblock%}
 {%block menu%}
-	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".filtros-causas">
+	<a class="navbar-toggle collapsed" data-toggle="collapse" data-target=".filtros-causas">
 		<span class="glyphicon glyphicon-filter"></span>
-	</button>
+	</a>
 {%endblock%}
 {%block menu1%}
 	<li>
-		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
+		<a class="navbar-toggle collapsed" data-toggle="collapse" data-target=".filtros-causas" style="display: block;">
 			<span class="glyphicon glyphicon-filter"></span>
-		</button>
+		</a>
 	</li>
 {%endblock%}
 {%block content%}
