--- a/templates/home/tribunales_receptor.html
+++ b/templates/home/tribunales_receptor.html
@@ -1,50 +1,53 @@
 {% extends 'base_app.html' %}
 {%load bootstrap3%}
 {%block title%} Tribunales Receptor | SIJ{%endblock%}
-{%block titulo%} Mis tribunales{%endblock%}
+{%block titulo%}Mis tribunales{%endblock%}
+{%block menu%}
+	<a class="navbar-toggle collapsed" data-toggle="modal" href="#agregar-tribunal">
+		<span class="glyphicon glyphicon-plus"></span>
+	</a>
+{%endblock%}
+{%block menu1%}
+	<li>
+		<a class="navbar-toggle collapsed" data-toggle="modal" href="#agregar-tribunal" style="display: block;">
+			<span class="glyphicon glyphicon-plus"></span>
+		</a>
+	</li>
+{%endblock%}
 {%block content%}
-<div class="row">
-	<div class="col-xs-12">
-		<p class="help-block">
-			Por favor, registre los tribunales donde trabaja.
-		</p>
-		<div class="row">
-			{% if mensaje %}
-				{% if error == 1%}
-				<div class="alert alert-danger">
-					{{mensaje}}
-				</div>
-				{% else%}
-				<div class="alert alert-success">
-					{{mensaje}}
-				</div>
-				{%endif%}
-			{%endif%}
-			<div class="col-md-5 col-xs-12">
-				<form action="" class="form-horizontal" role="form" method="POST">
-					{% csrf_token %}
-					<div class="form-group form-group-lg">
-						<div class="col-sm-9 col-xs-12">{{form.jurisdiccion}}</div>
-					</div>
-					<div class="form-group form-group-lg">
-						<div class="col-sm-9 col-xs-12">{{form.tribunal}}</div>
-					</div>
-					<button type="submit" class="btn btn-action btn-primary pull-right">Agregar</button>
-				</form>
-			</div>
-			<div class="col-md-7 col-xs-12">
-				<br>
-				<div class="panel panel-default">
-					<div class="panel-heading">Tribunales</div>
-					<div class="table-responsive">
-						<table class="table" id="div_table_tribunales">
-						</table>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div> <!-- class="table-responsive" -->
+	<table class="table" id="div_table_tribunales">
+	</table>
 </div>
+
+<div class="modal fade" id="agregar-tribunal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+				<h4 class="modal-title">Agregar Tribunal</h4>
+			</div>
+			<form action="" class="form-horizontal" role="form" method="POST">
+			<div class="modal-body">
+				<div class="row">
+					<div class="col-xs-12">
+						{% csrf_token %}
+						<div class="form-group form-group-lg">
+							<div class="col-sm-12 col-xs-12">{{form.jurisdiccion}}</div>
+						</div>
+						<div class="form-group form-group-lg">
+							<div class="col-sm-12 col-xs-12">{{form.tribunal}}</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+					<button type="submit" class="btn btn-action btn-primary btn-block">Agregar</button>
+			</div>
+			</form>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 {%endblock%}
 {%block scripts%}
 <script>
