--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -41,5 +41,10 @@
 </div>
 {% endblock %}
 {%block scripts%}
-<script type="text/javascript">document.getElementById("id_old_password").focus();</script>
+<script type="text/javascript">
+$(document).ready(function() {
+	document.getElementById("old_password").focus();
+	
+});
+</script>
 {%endblock%}
