--- a/templates/causas/nuevaCausa.html
+++ b/templates/causas/nuevaCausa.html
@@ -1,166 +1,134 @@
-{% extends 'base.html' %}
+{% extends 'base_app.html' %}
 {% load sorting_tags %}
 {% block title %} Nueva Causa | SIJ {%endblock%}
+{%block titulo%}Nueva Causa {%endblock%}
 {% block content %}
-<div class="jumbotron jumbotron-thin">
 	<ul class="nav nav-tabs">
-		<li id="1" class="active"><a href="#" style="cursor:default">Nueva Causa</a></li>
-		<li id="2"><a href="#" style="cursor:default">Asignar Receptor Judicial</a></li>
-		<li id="3"><a href="#" style="cursor:default">Confirmar Causa</a></li>
+		<li id="1" class="active"><a href="#" style="cursor:default"><span class="label label-default">1</span> Nueva Causa</a></li>
+		<li id="2"><a href="#" style="cursor:default"><span class="label label-default">2</span> Asignar Receptor Judicial</a></li>
+		<li id="3"><a href="#" style="cursor:default"><span class="label label-default">3</span> Confirmar Causa</a></li>
 	</ul>
 	<br>
-	<form action="." class="form-horizontal" id="formcausa" method="POST">
-		{%if msj%}
-			<alert class="alert-warning">{{msj}}</alert>
-		{%endif%}
-		{% csrf_token %}
-		<div class="row">
-			<div class="col-md-6 col-lg-6">
-				<div class="form-group">
-					<label for="ncausa" class="col-sm-4 col-md-4 col-lg-4 control-label">N° Causa</label>
-					<div class="col-sm-8">
+	<div class="row">
+		<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+			<form action="." class="form-horizontal" id="formcausa" method="POST">
+				{%if msj%}
+					<alert class="alert-warning">{{msj}}</alert>
+				{%endif%}
+				{% csrf_token %}
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.ncausa }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="ncausa" class="col-sm-4 col-md-4 col-lg-4 control-label">Materia</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.materia }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="region" class="col-sm-4 col-md-4 col-lg-4 control-label">Regi&oacute;n</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.region }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="provincia" class="col-sm-4 col-md-4 col-lg-4 control-label">Provincia</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.provincia }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="comuna" class="col-sm-4 col-md-4 col-lg-4 control-label">Comuna</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.comuna }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="direccion" class="col-sm-4 col-md-4 col-lg-4 control-label">Direcci&oacute;n</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{form.direccion}}
 					</div>
 				</div>
-			</div>
-
-			<div class="col-md-6 col-lg-6">
-				<div class="form-group">
-					<label for="tribunalOrigen" class="col-sm-4 col-md-4 col-lg-4 control-label">Jurisdicci&oacute;n del Tribunal</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.jurisdiccion }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="tribunalOrigen" class="col-sm-4 col-md-4 col-lg-4 control-label">Tribunal de Origen</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.tribunalOrigen }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="tipoDiligencia" class="col-sm-4 col-md-4 col-lg-4 control-label">Tipo de Diligencia</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.tipoDiligencia }}
 					</div>
 				</div>
-				<div class="form-group">
-					<label for="observacion" class="col-sm-4 col-md-4 col-lg-4 control-label">Observaci&oacute;n</label>
-					<div class="col-sm-8">
+				<div class="form-group form-group-lg">
+					<div class="col-sm-8 col-sm-offset-2 col-xs-12">
 						{{ form.observacion }}
 					</div>
 				</div>
-				<div class="form-group">
-					<div class="col-sm-4">
+				<div class="form-group form-group-lg">
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 						{{form.receptor}}
 					</div>
 				</div>
-			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<button type="button" class="btn btn-lg btn-primary pull-right" id="next1">Siguiente</button>
-			</div>
+				<div class="form-group form-group-lg">
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+						<button type="button" class="btn btn-lg btn-primary btn-block" id="next1">Siguiente</button>
+					</div>
+				</div>
+			</form>
 		</div>
-	</form>
 
 	<!-- tab2 -->
-	<div id="receptores" class="panel panel-default">
+	<div id="receptores" > <!-- class="panel panel-default" -->
 		<div class="panel-heading">
 			<h4 id="lreceptores">Lista de Receptores</h4>
 		</div>
 
-		<div class="table-responsive">
+		<div class="table-responsive"> <!-- class="table-responsive" -->
 			<table class="table table-striped table-hover" id="div_table_receptores"></table>
 		</div>
 	</div>
 
 	<!-- tab3 -->
-	<div id="resumen" class="panel panel-default">
-		<div class="panel-heading">
-			<h4 id="lcausa">Cofirmar Causa</h4>
-		</div>
-		<div class="panel-body">
-			<div class="form-horizontal">
-				<div class="row">
-					<div class="col-md-6 col-lg-6">
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">N° Causa</label>
-							<div id="lncausa" class="col-sm-8">
-								
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">Tribunal</label>
-							<div id="ltribunal" class="col-sm-8">
-								
-							</div>
-						</div>
-						
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">Objetivo Diligencia</label>
-							<div id="ldiligencia" class="col-sm-8">
-								
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">Direcci&oacute;n</label>
-							<div id="ldireccion" class="col-sm-8">
-								
-							</div>
-						</div>
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">Receptor</label>
-							<div id="lreceptor" class="col-sm-8">
-								
-							</div>
+	<div id="resumen"> <!-- class="panel panel-default" -->
+		<div class="row">
+			<div class="col-sm-8 col-sm-offset-2 col-xs-12">
+				<h4 id="lcausa">Cofirmar Causa</h4>
+				<div class="form-horizontal">
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">N° Causa</label>
+						<div id="lncausa" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">Tribunal</label>
+						<div id="ltribunal" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">Objetivo Diligencia</label>
+						<div id="ldiligencia" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">Direcci&oacute;n</label>
+						<div id="ldireccion" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">Receptor</label>
+						<div id="lreceptor" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<label class="col-sm-4 col-xs-12">Observacion</label>
+						<div id="lobservacion" class="col-sm-8"></div>
+					</div>
+					<div class="form-group form-group-lg">
+						<div class="col-xs-12 col-sm-8 col-sm-offset-2">
+							<button type="button" class="btn btn-lg btn-primary btn-block" id="confirmar">Confirmar</button>
 						</div>
 					</div>
-
-					<div class="col-md-6 col-lg-6">
-						<div class="form-group">
-							<label class="col-sm-4 col-lg-4 col-sm-4 col-md-4">Observacion</label>
-							<div id="lobservacion" class="col-sm-8">
-								
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<button type="button" class="btn btn-lg btn-primary pull-right" id="confirmar">Confirmar</button>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
-
 {% endblock %}
 {% block scripts %}
 <script src="/media/js/jquery.msgbox.min.js"></script>
@@ -170,6 +138,15 @@ $(document).ready(function(){
 	$("#resumen").hide();
 	$("#id_receptor").hide();
 
+
+	var sinop = "<option value='-1' selected disabled>Seleccione una materia</option>";
+	var options_materia = $("select#id_materia").html();
+	options = sinop + options_materia;
+	$("select#id_materia").html(options);
+
+	$("select#id_materia").focus(function(event) {
+		$(this).find("option").eq(0).remove();
+	});
 
 	var sinop  = "<option value='0'>Seleccione una regi&oacute;n</option>";
 	var options = $("select#id_region").html();
