--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -40,6 +40,7 @@
 {%endblock%}
 
 {%block scripts%}
+<script type="text/javascript" charset="utf-8" src="/media/js/cordova.js"></script>
 <script>
 	$(document).ready(function() {
 		document.addEventListener("deviceready", onDeviceReady, false);
