fix a url de cambiar contrasena

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,7 +4,7 @@
 {%block titulo%}Cambiar Contraseña{%endblock%}
 {% block content %}
 <div class="row">
-	<div class="col-md-8 col-md-offset-2 col-xs-12">
+	<div class="col-sm-12 col-md-8 col-md-offset-2 col-xs-12">
 		<form class="form-horizontal" action="" method="post" role="form">
 			<br>
 			{% csrf_token %}
