--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -2,8 +2,8 @@
 {% load url from future %}
 {% autoescape off %}
 {% blocktrans %}
-Ha recibido este mensaje debido a una solicitud de 
-recuperación de contraseña para su cuenta en {{ site_name }}.
+Ha recibido este mensaje debido a una solicitud de
+recuperación de contraseña para su cuenta en SIJ.cl .
 {% endblocktrans %}
 
 {% trans "Haga click en el siguiente link para reestablecer su contraseña:" %}
@@ -16,6 +16,6 @@ recuperación de contraseña para su cuenta en {{ site_name }}.
 
 {% trans "Saluda," %}
 
-{% blocktrans %}Equipo {{ site_name }}{% endblocktrans %}
+{% blocktrans %}Equipo SIJ{% endblocktrans %}
 
 {% endautoescape %}
