--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -11,11 +11,11 @@
 				<br>
 				<div class="row">
 					<div class="text-center">
-						<b>{{mensaje}}</b>	
+						<b>{{mensaje}}</b>
 					</div>
 					<div class="form-group form-group-lg">
 						<div class="col-sm-8 col-sm-offset-2 col-xs-12">
-							{{ form.username }}
+							{{ form.email }}
 						</div>
 					</div>
 					<div class="form-group form-group-lg">
