--- a/templates/home/registro.html
+++ b/templates/home/registro.html
@@ -17,7 +17,6 @@
 					{% endif %}
 					{{mensaje}}
 					<div class="form-group form-group-lg">
-						{# <label for="rol" class="control-label col-xs-2">Perfil</label> #}
 						<div class="col-xs-12 col-sm-8 col-sm-offset-2">
 							{{form.rol}}
 						</div>
@@ -37,28 +36,32 @@
 							<small>{{form.rut.errors}}</small>
 						</div>
 					</div>-->
-					<!--<div class="form-group">
-						<label for="nombre" class="control-label col-sm-5">Nombre</label>
-						<div class="col-sm-7">{{form.nombre}}</div>
-					</div>
-					<div class="form-group">
-						<label for="apellido" class="control-label col-sm-5">Apellido</label>
-						<div class="col-sm-7">{{form.apellido}}</div>
-					</div>-->
 					<div class="form-group form-group-lg">
-						{# <label for="email" class="control-label col-sm-5">Correo</label> #}
+					<div class="col-sm-8 col-sm-offset-2">{{form.nombre}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
+						    <small>{{form.nombre.errors}}</small>
+						</div>
+					</div>
+					<div class="form-group form-group-lg">
+						<div class="col-sm-8 col-sm-offset-2">{{form.apellido}}</div>
+						<div class="col-sm-8 col-sm-offset-2">
+						    <small>{{form.apellido.errors}}</small>
+						</div>
+					</div>
+					<div class="form-group form-group-lg">
+
 						<div class="col-sm-8 col-sm-offset-2">{{form.email}}</div>
 						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.email.errors}}</small>
 						</div>
 					</div>
-					<div class="form-group form-group-lg">
+					<!--<div class="form-group form-group-lg">
 						{# <label for="username" class="control-label col-sm-5">Nombre de Usuario</label> #}
 						<div class="col-sm-8 col-sm-offset-2">{{form.username}}</div>
 						<div class="col-sm-8 col-sm-offset-2">
 							<small>{{form.username.errors}}</small>
 						</div>
-					</div>
+					</div>-->
 					<div class="form-group form-group-lg">
 						{# <label for="password1" class="control-label col-sm-5">Contrase&ntilde;a</label> #}
 						<div class="col-sm-8 col-sm-offset-2">{{form.password1}}</div>
@@ -73,7 +76,7 @@
 							<small>{{form.password2.errors}}</small>
 						</div>
 					</div>
-					
+
 					<!--<div class="col-md-6" style="padding-top: 4px;">
 						<div class="form-group">
 							<label for="region" class="control-label col-sm-5">Regi&oacute;n</label>
@@ -110,14 +113,14 @@
 {%block scripts%}
 <script>
 	$(document).ready(function(){
-		var sinop = "<option value='-1' selected disabled>Perfil</option>";
-		var options_rol = $("select#id_rol").html();
-		options = sinop + options_rol;
-		$("select#id_rol").html(options);
+		//var sinop = "<option value='-1' selected disabled>Perfil</option>";
+		//var options_rol = $("select#id_rol").html();
+		//options = sinop + options_rol;
+		//$("select#id_rol").html(options);
 
-		$("select#id_rol").focus(function() {
-   			$(this).find("option").eq(0).remove();
-		});
+		//$("select#id_rol").focus(function() {
+   		//	$(this).find("option").eq(0).remove();
+		//});
 
 		// var sinop  = "<option value='0'>Seleccione una regi&oacute;n</option>";
 		// var options = $("select#id_region").html();
@@ -134,7 +137,7 @@
 
 		// sinop  = "<option value='0'>Seleccione un tribunal</option>";
 		// $("select#id_tribunal").html(sinop);
-		// $("select#id_tribunal").attr('disabled',true);		
+		// $("select#id_tribunal").attr('disabled',true);
 
 		// $("select#id_region").change(function(event){
 		// 	if ($(this).val() == 0){
@@ -172,7 +175,7 @@
 		// 	$("select#id_tribunal").attr('disabled', false);
 		// });
 
-		// $("input[name='rol']").change(function(event) {			
+		// $("input[name='rol']").change(function(event) {
 		// 	if ($("input[name='rol']:checked").val() == '1'){
 		// 		$("#tribunal-group").show();
 		// 		$("select#id_tribunal").attr('required','required')
