--- a/templates/select_options.html
+++ b/templates/select_options.html
@@ -1,5 +1,8 @@
 <option value="0">Seleccione {% if tipo == 'tribunal' %}un{%else%}una{%endif%} {{tipo}}</option>
-{% for  op in opciones %}
+{%if tipo == 'tribunal' %}
+<option value="-100">Todos</option>
+{%endif%}
+{% for op in opciones %}
 <option value="{{op.0}}">{{op.1}}</option>
 {%empty%}
 <option value="0">-</option>
